--- a/2.html
+++ b/2.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
-<body>
+<body style="background-color: blue;">
+  <font color="white" size="5">
 <b>Bikes:</b><br>
   On-demand electric bikes that allow you to go further<br><br>
 
