--- a/3.html
+++ b/3.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
-<body>
+<body style="background-color: blue;">
+  <font color="white" size="5">
   <b>UberXL:</b><br>
 Affordable rides for groups up to 6<br><br>
 
