--- a/aboutus.html
+++ b/aboutus.html
@@ -2,7 +2,7 @@
   <head>
     <title>a</title>
   </head>
-  <body>
+  <body style="background-color: blue;">
     <h1>Sustainability</h1>
     Uber is committing to becoming a fully electric, zero-emission platform by 2040, with 100% of rides taking place in zero-emission vehicles, on public transit, or with micromobility. It is our responsibility as the largest mobility platform in the world to more aggressively tackle the challenge of climate change. We will do this by offering riders more ways to ride green, helping drivers go electric, making transparency a priority and partnering with NGOs and the private sector to help expedite a clean and just energy transition.
     <br><h1>Rides and beyond</h1>
