--- a/contactus.html
+++ b/contactus.html
@@ -2,7 +2,7 @@
   <head>
     <title>a</title>
   </head>
-  <body>
+  <body style="background-color: blue;">
     <h1>Contact Us</h1>
     <p>Please fill out the form below to contact us.</p>
     <form action="submit-form.php" method="post">
@@ -12,5 +12,4 @@
       <input type="email" id="email" name="email" required><br><br>
       <label
   </body>
-</html>
 </html>
