--- a/1.html
+++ b/1.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<body>
+<body style="background-color: blue;">
   <b>Uber Shuttle:</b><br>
     Shared A/C rides at affordable prices<br><br>
 
