--- a/d.html
+++ b/d.html
@@ -2,7 +2,7 @@
   <head>
     <title>a</title>
   </head>
-  <body>
+  <body style="background-color: black;">
     <a href="aboutus.html" target="can"><center>
       <font>
       About Us
@@ -10,5 +10,4 @@
     </center></a>
   
   </body>
-</html>
 </html>
