--- a/e.html
+++ b/e.html
@@ -2,12 +2,11 @@
   <head>
     <title>a</title>
   </head>
-  <body>
+  <body style="background-color: black;">
     <a href="contactus.html" target="can"><center>
       <font>
       Contact Us
     </center></a>
   </font>
   </body>
-</html>
 </html>
