--- a/services.html
+++ b/services.html
@@ -3,7 +3,7 @@
     <head>
         <title>Services</title>
     </head>
-    <body>
+    <body style="background-color: beige;">
         <a href="1.html" target="can">Featured</a><br><br><br>
         <a href="2.html" target="can">2 or 3 wheels</a><br><br><br>
         <a href="3.html" target="can">Extra room</a>
