--- a/d.html
+++ b/d.html
@@ -4,7 +4,7 @@
   </head>
   <body style="background-color: black;">
     <a href="aboutus.html" target="can"><center>
-      <font>
+      <font color="white">
       About Us
       </font>  
     </center></a>
