--- a/e.html
+++ b/e.html
@@ -4,7 +4,7 @@
   </head>
   <body style="background-color: black;">
     <a href="contactus.html" target="can"><center>
-      <font>
+      <font color="white">
       Contact Us
     </center></a>
   </font>
