--- a/login.html
+++ b/login.html
@@ -2,7 +2,7 @@
   <head>
     <title>a</title>
   </head>
-  <body>
+  <body style="background-color: blue;">>
     <form>
       <h1>Login to your account</h1>
       <input type="text" name="username" placeholder="username">
