--- a/registration.html
+++ b/registration.html
@@ -2,7 +2,7 @@
   <head>
     <title>a</title>
   </head>
-  <body>
+  <body style="background-color: blue;">>
     <h1>Registration Form</h1>
     <form action="/register" method="POST">
       <label for="username">Username:</label>
